--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <p class="service__text">Даний ресурс на разі неактивний.</p>
             </li>
             <li class="service__item">
-                <a href="http://www.behance.net/wecranid757" class="service__link service__link_colorbehance">behance</a>
+                <a href="http://www.behance.net/wecrani" class="service__link service__link_colorbehance">behance</a>
                 <p class="service__text">Даний ресурс на разі неактивний.</p>
             </li>
         </ul>
