--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <p class="service__text">Нові роботи можна знайти тут. Актуально з 2020 року.</p>
             </li>
             <li class="service__item">
-                <a href="https://www.t.me/wecrani_workroom" class="service__link service__link_colortelegram">telegram</a>
+                <a href="https://www.t.me/wecrani_channel" class="service__link service__link_colortelegram">telegram</a>
                 <p class="service__text">Основний канал з найбільшою кількістю робіт. З 2019 року містить лише контент на українській мові.</p>
                 </li>
             <!--
