--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                 <p class="service__text">Деякі роботи на DeviantArt. Актуально з 2017 року.</p>
             </li>
             <li class="service__item">
-                <a href="https://www.facebook.com/wecrani.studio" class="service__link service__link_colorfacebook">facebook</a>
+                <a href="https://www.facebook.com/wecrani" class="service__link service__link_colorfacebook">facebook</a>
                 <p class="service__text">Нові роботи можна знайти тут. Актуально з 2020 року.</p>
             </li>
             <li class="service__item">
-                <a href="https://www.t.me/wecrani_channel" class="service__link service__link_colortelegram">telegram</a>
+                <a href="https://www.t.me/wecrani_workroom" class="service__link service__link_colortelegram">telegram</a>
                 <p class="service__text">Основний канал з найбільшою кількістю робіт. З 2019 року містить лише контент на українській мові.</p>
                 </li>
             <!--
