--- a/index.html
+++ b/index.html
@@ -35,16 +35,14 @@
                 <a href="https://www.t.me/wecrani_workroom" class="service__link service__link_colortelegram">telegram</a>
                 <p class="service__text">Основний канал з найбільшою кількістю робіт. З 2019 року містить лише контент на українській мові.</p>
                 </li>
-            <!--
             <li class="service__item">
-                <a href="https://www.t.me/wecrani_channel" class="service__link service__link_colortelegram">telegram | ru</a>
-                <p class="service__text">Канал в Телеграмі. Контент на російській мові.</p>
+                <a href="https://www.youtube.com/@wecrani/" class="service__link service__link_colortelegram">youtube | ru</a>
+                <p class="service__text">Відеоканал на Youtube.</p>
             </li>
             <li class="service__item">
-                <a href="https://www.t.me/wecrani_gallery" class="service__link service__link_colortelegram">telegram | en</a>
-                <p class="service__text">Канал в Телеграмі. Контент на англійській мові.</p>
-            </li>
-            -->
+                <a href="https://wecrani.itch.io/" class="service__link service__link_colortelegram">itch | en</a>
+                <p class="service__text">Мої інді-ігри.</p>
+            </li>        
             <li class="service__item">
                 <a href="https://www.instagram.com/wecrani" class="service__link service__link_colorinstagram">instagram</a>
                 <p class="service__text">Профіль в Інстаграмі. Можна знайти останні роботи тут. Актуальний з кінця 2019 року.</p>
