--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                 <p class="service__text">Основний канал з найбільшою кількістю робіт. З 2019 року містить лише контент на українській мові.</p>
                 </li>
             <li class="service__item">
-                <a href="https://www.youtube.com/@wecrani/" class="service__link service__link_colortelegram">youtube | ru</a>
+                <a href="https://www.youtube.com/@wecrani/" class="service__link service__link_colortelegram">youtube</a>
                 <p class="service__text">Відеоканал на Youtube.</p>
             </li>
             <li class="service__item">
-                <a href="https://wecrani.itch.io/" class="service__link service__link_colortelegram">itch | en</a>
+                <a href="https://wecrani.itch.io/" class="service__link service__link_colortelegram">itch</a>
                 <p class="service__text">Мої інді-ігри.</p>
             </li>        
             <li class="service__item">
