--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
            <section class="header__title title">
                <h1 class="title__head">wecrani</h1>
                <hr class="title__line">
-               <p class="title__text">Митець. Займаюсь комп'ютерною графікою, традиційним мистецтвом.</p>
+               <p class="title__text">Захоплююсь дизайном, малюванням, анімацією, 3d графікою та трішки програмуванням. </p>
            </section>
        </header>
        <aside class="service">
@@ -29,23 +29,23 @@
             </li>
             <li class="service__item">
                 <a href="https://www.facebook.com/wecrani" class="service__link service__link_colorfacebook">facebook</a>
-                <p class="service__text">Нові роботи можна знайти тут. Актуально з 2020 року.</p>
+                <p class="service__text">Я в соціальній мережі Facebook.</p>
             </li>
             <li class="service__item">
                 <a href="https://www.t.me/wecrani_workroom" class="service__link service__link_colortelegram">telegram</a>
                 <p class="service__text">Основний канал з найбільшою кількістю робіт. З 2019 року містить лише контент на українській мові.</p>
                 </li>
             <li class="service__item">
-                <a href="https://www.youtube.com/@wecrani/" class="service__link service__link_colortelegram">youtube</a>
+                <a href="https://www.youtube.com/@wecrani/" class="service__link service__link_coloryoutube dontwork">youtube</a>
                 <p class="service__text">Відеоканал на Youtube.</p>
             </li>
             <li class="service__item">
-                <a href="https://wecrani.itch.io/" class="service__link service__link_colortelegram">itch</a>
+                <a href="https://wecrani.itch.io/" class="service__link service__link_coloritch dontwork">itch</a>
                 <p class="service__text">Мої інді-ігри.</p>
             </li>        
             <li class="service__item">
                 <a href="https://www.instagram.com/wecrani" class="service__link service__link_colorinstagram">instagram</a>
-                <p class="service__text">Профіль в Інстаграмі. Можна знайти останні роботи тут. Актуальний з кінця 2019 року.</p>
+                <p class="service__text">Профіль в Інстаграмі.</p>
             </li>
             <li class="service__item">
                 <a href="https://www.twitter.com/wecrani" class="service__link service__link_colortwitter">twitter</a>
@@ -56,12 +56,12 @@
                 <p class="service__text">Профиль в Tumblr. Можна знайти деякі роботи.</p>
             </li>
             <li class="service__item">
-                <a href="https://www.artstation.com/wecrani" class="service__link service__link_colorartstation">artstation</a>
-                <p class="service__text">Даний ресурс на разі неактивний.</p>
+                <a href="https://www.artstation.com/wecrani" class="service__link service__link_colorartstation dontwork">artstation</a>
+                <p class="service__text">Мої малюнки.</p>
             </li>
             <li class="service__item">
-                <a href="http://www.behance.net/wecrani" class="service__link service__link_colorbehance">behance</a>
-                <p class="service__text">Даний ресурс на разі неактивний.</p>
+                <a href="http://www.behance.net/wecrani" class="service__link service__link_colorbehance dontwork">behance</a>
+                <p class="service__text">Презентація проектів.</p>
             </li>
         </ul>
         </aside>
