--- a/index.html
+++ b/index.html
@@ -43,11 +43,10 @@
                 <a href="https://wecrani.itch.io/" class="service__link service__link_coloritch dontwork">itch</a>
                 <p class="service__text">Мої інді-ігри.</p>
             </li>        
-            <!--<li class="service__item">
-                <a href="https://www.instagram.com/wecrani" class="service__link service__link_colorinstagram">instagram</a>
-                <p class="service__text">Профіль в Інстаграмі.</p>
+            <li class="service__item">
+                <a href="https://www.buymeacoffee.com/wecrani" class="service__link service__link_colorinstagram">Buy me a coffee</a>
+                <p class="service__text">Підтримати мене.</p>
             </li>
-            -->
             <li class="service__item">
                 <a href="https://www.twitter.com/wecrani" class="service__link service__link_colortwitter">twitter</a>
                 <p class="service__text">Інформаційний профіль до 2019 року. З кінця 2019 року можна стежити за останніми роботами.</p>
