--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
                 <p class="service__text">Презентація проектів.</p>
             </li>
         </ul>
+        <div class="service__twitter">
+            <a class="twitter-timeline" href="https://twitter.com/wecrani?ref_src=twsrc%5Etfw">Tweets by wecrani</a> 
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+        </div>
         </aside>
     </div>
 </body>
